--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^2.15.0
-  cloud_firestore: ^4.8.2
+  firebase_core: ^3.8.0
+  cloud_firestore: ^5.5.0
+  firebase_storage: ^12.3.6
   flutter_bloc: ^8.0.0
   equatable: ^2.0.0
   responsive_builder: ^0.4.1
   shared_preferences: ^2.0.13
   intl: ^0.17.0
+  dropdown_search: ^6.0.1
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
