android device support setup

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,11 +45,11 @@ dependencies:
   intl: ^0.17.0
   dropdown_search: ^6.0.1
   image_picker: ^0.8.5+3
-  flutter_image_compress: ^1.1.0
   path_provider: ^2.0.11
   cached_network_image: ^3.2.3
   http: ^1.2.2
   universal_html: ^2.0.2
+  permission_handler: ^11.1.0
 
 dev_dependencies:
   flutter_test:
