--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   http: ^1.2.2
   universal_html: ^2.0.2
   permission_handler: ^11.1.0
+  dio: ^5.4.0  # For handling HTTP requests
 
 dev_dependencies:
   flutter_test:
